--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "parcel": "parcel index.html"
+    "start:parcel": "parcel index.html",
+    "start:server": "json-server -w db.json"
   },
   "keywords": [],
-  "author": "Didas Mbalanya <didas@youverify.co>",
+  "author": "Didas Mbalanya <didasmbalanya@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "axios": "0.21.1",
+    "json-server": "0.16.3",
     "parcel-bundler": "1.12.4"
   },
   "devDependencies": {
